Finalize vehicle position API changes
Co-authored-by: denis-troller <4266522+denis-troller@users.noreply.github.com>